@@ -1,3 +1,8 @@
+2008-12-19  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* tclconfig/tcl.m4: fix odbc build on mingw32
+	* configure:	autoconf-2.59
+
 2008-12-17  Don Porter  <dgp@users.sourceforge.net>
 
 	* README:	New file.
